--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "grockery",
-  "version": "1.0.1",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "version": "1.0.2",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "repository": "git@github.com:thatisuday/grockery.git",
   "author": "Uday Hiwarale <thatisuday@gmail.com>",
   "license": "MIT",
